datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Project {
  id     String  @id @default(uuid())
  name   String
  repo   GitRepo @relation(fields: [repoId], references: [id])
  repoId String
  ci     CI      @relation(fields: [ciId], references: [id])
  ciId   String
}

model CI {
  id       String    @id @default(uuid())
  type     CIType    @relation(fields: [cITypeId], references: [id])
  cITypeId String
  Project  Project[]
}

model CIType {
  id          String @id @default(uuid())
  name        String @unique
  description String
  CI          CI[]
}

model GitRepo {
  id                   String             @id @default(uuid())
  url                  String
  credentials          GitRepoCredentials @relation(fields: [gitRepoCredentialsId], references: [id])
  gitRepoCredentialsId String
  Project              Project[]
}

model GitRepoCredentials {
  id       String    @id @default(uuid())
  username String
  password String
  GitRepo  GitRepo[]
}
